<resources>
    <string name="app_name">NightOut</string>
    <string name="google_place_picker_key">AIzaSyBTaViY1yy682xv08Pnp33jE1fgOCAIxq4</string>
    <string name="default_notification_channel_id">1001</string>
    <string name="txt_progress">Please Wait…</string>
    <string name="No_Internet">No Internet Connection !!</string>
    <string name="Login">Login</string>
    <string name="Hello">Hello, Welcome!</string>
    <string name="EnterCode">Enter Code</string>
    <string name="OTP">OTP</string>
    <string name="didnot_get_pwd">Didn\'t get a text?</string>
    <string name="SendAgain">Send Again</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot ID / Password?</string>
    <string name="reset">Reset</string>
    <string name="forget_password_label">Forgot Password</string>
    <string name="email_id">Email Id</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="send">Send</string>
    <string name="create_account">Create account</string>
    <string name="registration">Registration</string>
    <string name="food_store_name">Food Store Name</string>
    <string name="information">Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="upload_document">Upload Documents</string>
    <string name="id_verification">ID Verification</string>
    <string name="proof_of_permises_license">Proof of premises license <font color='#FF0000'>*</font></string>
    <string name="upload_photo">Upload Photo</string>
    <string name="lisence_number">License Number</string>
    <string name="proof_of_alcohol_license">Proof of Alcohol license number <font color='#FF0000'>*</font></string>
    <string name="proof_of_unique_tax">Proof Unique tax reference number <font color='#FF0000'>*</font></string>
    <string name="submit">Submit</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Save">Save</string>
    <string name="Create_Group">Create Group</string>
    <string name="Home">Home</string>
    <string name="My_Profile">My Profile</string>
    <string name="Transport">Transport</string>
    <string name="Chat">Chat</string>
    <string name="Bar_Crawl">Bar Crawl</string>
    <string name="Venues">Venues</string>
    <string name="Foods">Food</string>
    <string name="Events">Events</string>
    <string name="TrackNTrace"><![CDATA[Track & Trace]]></string>
    <string name="Reffer_friend">Refer a Friend</string>
    <string name="CMS_Pages">CMS Pages</string>
    <string name="About">About Us</string>
    <string name="FAQ">FAQ</string>
    <string name="Trems_Condition">Terms and Condition</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="Settings">Settings</string>
    <string name="Emergency_Contact">Emergency Contact</string>
    <string name="Contact_List">Contact List</string>
    <string name="Emergency_History">Panic Situation</string>
    <string name="Panic_Situation">Panic Situation</string>
    <string name="Logout">Logout</string>
    <string name="Savetobarcrawl">Save to Bar Crawl</string>
    <string name="search_here">Search here</string>
    <string name="press_again">Press again to exit!</string>
    <string name="Facilities">Facilities</string>
    <string name="Pre_Booking">Pre Booking</string>
    <string name="Menu">Menu</string>
    <string name="duumyText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Adipiscing libero varius tempus duis vulputate orci. Pretium in posuere et tortor ipsum tellus sit tortor vel.</string>
    <string name="Discounts">Discounts</string>
    <string name="More">More</string>
    <string name="discount10">10% Discount on</string>
    <string name="firsLine">Quick Noodles + Grey Goose</string>
    <string name="secondLine">Crioc + Sprouts</string>
    <string name="thridLine">1 Glass Belvedra + Dim Sums</string>
    <string name="Place_Order">Place Order</string>
    <string name="dummyText">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="dummyText2">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrmollit non des erunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam</string>
    <string name="Have_query">Have a query</string>
    <string name="Book_Now">Book Now</string>
    <string name="didnot_signup">Don’t have an account?</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="chngMobNo">Change Mobile Number</string>
    <string name="Change">Change?</string>
    <string name="Buy_Ticket">Buy Ticket</string>
    <string name="Download_Ticket">Download Ticket</string>
    <string name="Order_Summery">Order Summary</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="Congratulation">Congratulation</string>
    <string name="Your_Confirmed">Your Event is Booked</string>
    <string name="Give_Feedback">Give Feedback</string>
    <string name="Review_Rating"><![CDATA[Review & Rating]]></string>
    <string name="Excellent">Excellent!</string>
    <string name="Create">Create</string>
    <string name="faq">FAQ</string>
    <string name="Notifications">Notifications</string>
    <string name="toll_free">Toll Free no</string>
    <string name="dummyNumber">+852 5002 4516</string>
    <string name="email">Email</string>
    <string name="dummy_email">infonightout123@gmail.com</string>
    <string name="dummy_address">1 Fairclough St, Liverpool L1 1F Manchester M3 5LH, United Kingdom</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter your name</string>
    <string name="phone_no">Phone no.</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="type_your_query">Type your query here...</string>
    <string name="card_number">Card number</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="expiry">Expiry</string>
    <string name="date_format">MM/YY</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="make_default">Make Default</string>
    <string name="add_card">Add Card</string>
    <string name="all_cards">All Cards</string>
    <string name="card_type">Master Card</string>
    <string name="card_dummy_number">1234 **** **** **56</string>
    <string name="expiry_date">Exp: 12/2021 </string>
    <string name="defaults">Default</string>
    <string name="my_cards">My Cards</string>
    <string name="total_amount">Total Amount</string>
    <string name="suggest_for_you">Suggested for you</string>
    <string name="add_a_payment_method">Add a Payment Method</string>
    <string name="pay_now">Pay Now</string>
    <string name="blank" />
    <string name="paypal">Paypal</string>
    <string name="notification">Notification</string>
    <string name="email_notification">Email Notification</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_time">04:00Am</string>
    <string name="dummy_name">John Wick</string>
    <string name="dummy_user_address">London,United States</string>
    <string name="enter_first_name">enter first name</string>
    <string name="enter_last_name">enter last name</string>
    <string name="addressOne">Address 1</string>
    <string name="enter_addrs1">Enter your address</string>
    <string name="addressTwo">Address 2</string>
    <string name="about_me">About me</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="location">Location</string>
    <string name="country">United Kingdom</string>
    <string name="edit">Edit</string>
    <string name="club_name">Club : Vanity Night Club</string>
    <string name="dumy_date">12 July 2021</string>
    <string name="Filter">Filter</string>
    <string name="Help">Help</string>
    <string name="Lost_Item_Name">Lost Item Name</string>
    <string name="Enter_Product_name">Enter Product name</string>
    <string name="Full_Name">Full Name</string>
    <string name="Enter_your_name">Enter your name</string>
    <string name="Email_Id">Email Id</string>
    <string name="Enter_mail">Enter mail</string>
    <string name="Product_Details">Product Details</string>
    <string name="Write_here">Write here...</string>
    <string name="Choose_Venues">Choose Venues</string>
    <string name="add_contact">Add Contact</string>
    <string name="dummy_time">02:00 am</string>
    <string name="where_are_you_go">Where are you going</string>
    <string name="change">Change?</string>
    <string name="dummy_taxi_company_name">Uber taxi</string>
    <string name="dummy_distance">2.2 km away</string>
    <string name="select_taxi">Select Taxi</string>
    <string name="select_your_taxi">Select your Taxi</string>
    <string name="Send">Send</string>
    <string name="Share">Share</string>
    <string name="Direction">Direction</string>
    <string name="Lost_Item">Lost Item</string>
    <string name="Found">Found</string>
    <string name="please_enter_phno">Please enter mobile number</string>
    <string name="please_enter_fName">Please enter first name</string>
    <string name="please_enter_lName">Please enter last name</string>
    <string name="please_enter_valid_phno">Mobile number should be 10 digit</string>
    <string name="please_enter_fname">Please enter first name</string>
    <string name="please_enter_lname">Please enter last name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_validemail">Please enter valid email</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="please_enter_complete_otp">Please enter complete OTP</string>
    <string name="facilitynot_avail">Facilities not available</string>
    <string name="countrycode">+44 %s</string>
    <string name="entrotp_recivedmobno">Please Enter the Verification Code Sent to Mobile Number:</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="close">Close</string>
    <string name="typeFile">1</string>
    <string name="Saved">Saved</string>
    <string name="Shared">Shared</string>
    <string name="dummychk">Lorem ipsum dolor sit amet</string>
    <string name="NoteDetail">You can Record the Audio and Video for 15 Minutes in Emergency Case.</string>
    <string name="DONE">DONE</string>
    <string name="DONE_small">Done</string>
    <string name="Add">ADD</string>
    <string name="Add_small">Add</string>
    <string name="yourQuery">Your Query</string>
    <string name="noteFacilityQuery">Note : You can ask question related to facilities only</string>
    <string name="name_plz">Please enter your name</string>
    <string name="phone_no_plz">Please enter phone number</string>
    <string name="detail_plz">Please enter your query</string>
    <string name="Select">Select</string>
    <string name="query_spin_plz">Please select your query type</string>
    <string name="Description">Description</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="No_oneinyour_contact">No one in your contact list uses the App </string>
    <string name="Sharethelink">Share the link of App with your friend and Add them in Emergency Contact. </string>
    <string name="Your_earlier_reviews">Your earlier reviews are waiting for you.</string>
    <string name="OK">OK</string>
    <string name="Rating">Rating</string>
</resources>