<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_10sdp"
        android:background="@color/bg_clr_venu">

        <TextView
            android:id="@+id/dgTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:fontFamily="@font/proximanova_reg"
            android:text="@string/Rating"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dgCloseBtnTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_close_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/dgLineHr"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/view_line_clr"
            app:layout_constraintTop_toBottomOf="@+id/dgTitle" />






        <TextView
            android:id="@+id/dgDateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"


            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:gravity="center"
            android:text="@string/Your_earlier_reviews"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@+id/dgLineHr" />





        <com.google.android.material.button.MaterialButton
            android:id="@+id/dgOkBtn"
            style="@style/buttonTextStyle"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:background="@drawable/gredient_bg"
            android:textSize="@dimen/_13ssp"
            android:padding="@dimen/_1sdp"
            android:text="@string/OK"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dgDateBtn" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>