<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/bg_clr_venu"
        android:paddingBottom="@dimen/_20sdp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dialog_logo"
            android:layout_width="wrap_content"
            android:background="@null"
            android:layout_marginTop="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/dialog_logo"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:text="@string/Facilities"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/proximanova_reg"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/dialog_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/dialog_detail"
            android:layout_width="match_parent"
            android:text="@string/dummyText"
            android:gravity="center"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:fontFamily="@font/proximanova_reg"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/dialog_view"
            app:layout_constraintTop_toBottomOf="@+id/dialog_detail"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10ssp"
            android:background="@color/dialog_view_lineclr"
            android:layout_height="1dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/dialog_recycler"
            app:layout_constraintTop_toBottomOf="@+id/dialog_view"
            android:layout_marginTop="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"/>


        <com.google.android.material.button.MaterialButton
            style="@style/buttonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"

            android:layout_marginEnd="@dimen/_15sdp"
            android:text="@string/Have_query"
            android:id="@+id/dialog_Query"
            android:background="@drawable/gredient_bg"
            app:layout_constraintTop_toBottomOf="@+id/dialog_recycler" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>